test/typechecker.d/invalid/fns5.souc.bad
f(x: Integer): Char = 'a'

g(x: Integer): Char = do
	return 'a' & f
